# ssg

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
site/docs/: index.md
src/: lib.rs  main.rs
src/markdown/: html.rs  mod.rs
src/serve/: livereload.js  mod.rs  watch.rs
