[package]
name = "ssg"
version = "0.0.1-SNAPSHOT"
edition = "2021"

[dependencies]
axum = { version = "0.6.2", default-features = false, features = [
  "http1",
  "tokio",
] }
futures = "0.3.25"
hyper = "0.14.23"
notify = "5.0.0"
open = "3.2.0"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["rt"] }
ws = "0.9.2"
