[package]
name = "ssg"
version = "0.0.1-SNAPSHOT"
edition = "2021"

[dependencies]
axum = { version = "0.6.2", optional = true, default-features = false, features = ["http1", "tokio"] }
ctrlc = { version = "3.2.4", optional = true }
env_logger = { version = "0.10.0", optional = true }
futures = { version = "0.3.25", optional = true }
hyper = { version = "0.14.23", optional = true }
log = { version = "0.4.17", optional = true }
notify = { version = "5.0.0", optional = true }
open = { version = "3.2.0", optional = true }
serde_json = { version = "1.0.91", optional = true }
thiserror = { version = "1.0.38", optional = true }
tokio = { version = "1.24.1", optional = true, features = ["macros", "rt-multi-thread"] }
ws = { version = "0.9.2", optional = true }

[features]
default = ["markdown", "serve"]
markdown = []
serve = ["axum", "ctrlc", "env_logger", "futures", "hyper", "log", "notify", "open", "serde_json", "thiserror", "tokio", "ws"]
